EoL for versions older than 1.21.2